2006-03-27  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac:
	* GL/glx/Makefile.am: Add --enable-glx-tls ./configure option to
	enable use of TLS for storing current GL context.  Use this option
	to let AIGLX load DRI drivers compiled for TLS.

2006-03-27  Adam Jackson  <ajax@freedesktop.org>

	* include/regionstr.h:
	* include/scrnintstr.h:
	* mi/miscrinit.c:
	Remove long-dead screen region code.

	* Xext/panoramiX.c:
	* Xext/security.c:
	* Xext/xevie.c:
	* Xprint/AttrValid.h:
	* Xprint/Oid.h:
	* dbe/dbe.c:
	* dbe/midbe.c:
	* dix/devices.c:
	* dix/events.c:
	* dix/window.c:
	* mi/miarc.c:
	* mi/mioverlay.c:
	* miext/shadow/shadow.h:
	* os/connection.c:
	* os/xdmauth.c:
	* record/record.c:
	* render/mipict.c:
	Big old pile of warning fixes.

	* configure.ac:
	Silence some editorializing in the configure help text.

2006-03-25  Daniel Stone  <daniel@freedesktop.org>

	* xkb/xkbUtils.c:
	Fix two of the more glaring unconditional-NULL-dereference screwups.
	There are many more left.

	* xkb/Makefile.am:
	* xkb/xkbconfig.c:
	* xkb/ddxConfig.c:
	* xkb/xkbInit.c:
	* hw/xgl/glx/xglx.c:
	* hw/xnest/Keyboard.c:
	Remove weirdo XkbCF pre-configuration code.

	* xkb/xkb.h:
	* xkb/xkb.c:
	Remove INITARGS braindamage, change to void; add XkbExtensionInit
	prototype to xkb.h.
	Explicitly initialise nTypes in xkb.c.

	* configure.ac:
	* include/xkb-config.h.in:
	* xkb/xkbfmisc.c:
	* xkb/maprules.c:
	* hw/xfree86/dixmods/xkbPrivate.c:
	Bug #3819: Remove open-coding of strcasecmp.

	* xkb/ddxVT.c:
	* xkb/ddxPrivate.c:
	* xkb/ddxKillSrv.c:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/dixmods/xkbVT.c:
	* hw/xfree86/dixmods/xkbPrivate.c:
	* hw/xfree86/dixmods/xkbKillSrv.c:
	Move XFree86 DDX actions out of xkb/ and into proper files in their
	own right in dixmods.

	* xkb/Makefile.am:
	* xkb/XKBAlloc.c:
	* xkb/XKBGAlloc.c:
	* xkb/XKBMAlloc.c:
	* xkb/XKBMisc.c:
	* xkb/xkbfmisc.c:
	* xkb/xkmread.c:
	* xkb/xkbtext.c:
	* xkb/xkbout.c: